--- a/Server/appsettings.json
+++ b/Server/appsettings.json
@@ -1,9 +1,14 @@
+
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "ConnectionStrings": {
+    "ConStr": "data source = Data\\Ticket.db"
   },
-  "AllowedHosts": "*"
+"Logging": {
+  "LogLevel": {
+    "Default": "Information",
+    "Microsoft.AspNetCore": "Warning"
+  }
+},
+"AllowedHosts": "*"
 }
+
